# education

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
chat/: consumers.py  routing.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py
courses/: fields.py  forms.py  mixins.py  models.py  urls.py  views.py
courses/api/: permissions.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_module.py  0003_video_text_image_file_content.py  0004_alter_content_options_content_order.py  0005_course_students.py
courses/templates/: base.html
courses/templates/courses/course/: list.html
courses/templates/courses/manage/course/: list.html
courses/templates/courses/manage/module/: content_list.html
courses/templates/registration/: logged_out.html  login.html
courses/templatetags/: course.py
data/cache/: dump.rdb
data/db/base/16384/: 1247  1249  1249_fsm  1259  16385  16386  16391  16393  16394  16397  16399  16401  16402  16405  16411  16413  16415  16419  16421  16422  16425  16427  16429  16433  16435  16439  16441  16448  16450  16462  16464  16465  16477  16478  16479  16491  16492  16493  16499  16500  (+79 more)
data/db/global/: 1260  1262  2671  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_16384.stat  global.stat
students/: forms.py  urls.py  views.py
students/templates/students/course/: list.html
