[tool.poetry]
name = "education"
version = "0.1.0"
description = "Education website"
authors = ["sudodebug <sudodebug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.6"
django-braces = "^1.15.0"
django-embed-video = "^1.4.9"
pymemcache = "^4.0.0"
django-debug-toolbar = "^4.1.0"
redis = "^4.6.0"
django-redisboard = "^8.4.0"
attrs = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
